# kirboy

./: .gitignore  Cargo.toml  README.md
icons/: 1024.icns  128.icns  16.icns  256.icns  32.icns  512.icns  64.icns
src/: cartridge.rs  circular.rs  config.rs  controller.rs  cpu.rs  emulator.rs  gpu.rs  joypad.rs  lib.rs  main.rs  mmu.rs  player.rs  registers.rs  renderer.rs  timer.rs  utils.rs
src/emulator/: audio.rs  cpu.rs  gpu.rs  joypad.rs  mmu.rs  mod.rs  ppu.rs  registers.rs  timer.rs
src/emulator/apu/: channel.rs  mod.rs  noise.rs  square.rs  wave.rs
src/emulator/cpu/: mod.rs
src/emulator/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
src/mbc/: mbc0.rs  mbc1.rs  mod.rs
src/shaders/: 3d.wgsl  base.wgsl  crt.wgsl  gb.wgsl  hue.wgsl  invert.wgsl  noise.wgsl  sin.wgsl
src/system/: mmu.rs  mod.rs  ppu.rs  timer.rs
src/system/apu/: channel.rs  mod.rs  noise.rs  square.rs  timer.rs  wave.rs
src/system/cpu/: instructions.rs  mnemonic.rs  mod.rs  registers.rs
src/system/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
