[package]
name = "kirboy"
version = "0.1.0"
edition = "2021"
description = "A GameBoy (DMG-01) Emulator."
authors = ["Steche"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
bincode = "1.3.3"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
muda = "0.14.0"
pixels = "0.13.0"
rfd = "0.14.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_yml = "0.0.11"
tao = {version = "0.29", features = ["rwh_05"]}
windows-sys = "0.59.0"


[package.metadata.bundle]
name = "kirboy"
identifier = "net.steche.kirboy"
version = "0.1.0"
copyright = "Copyright (c) Steche 2024. All rights reserved."
short_description = "A GameBoy (DMG-01) Emulator."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""


[package.metadata.bundle.bin.tao]
name = "kirboy"
identifier = "net.steche.kirboy"
version = "0.1.0"
copyright = "Copyright (c) Steche 2024. All rights reserved."
short_description = "A GameBoy (DMG-01) Emulator."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
